--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -198,7 +198,8 @@
                                                 </a>
                                             </li>
                                             }
-                                        <li class="nav-item"><a class="nav-link" asp-action="Thongtin" asp-controller="Home">Thông tin đơn hàng</a></li>
+                                        <li class="nav-item"><a class="nav-link" asp-action="Thongtin" asp-controller="Home">Đơn hàng</a></li>
+                                        <li class="nav-item"><a class="nav-link" asp-action="ApplyDiscount" asp-controller="Home">Kho voucher</a></li>
                                     </ul>
                                     }
                                     else
