--- a/APPVIEW/Views/Image/Create.cshtml
+++ b/APPVIEW/Views/Image/Create.cshtml
@@ -5,50 +5,73 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Create</h1>
-
-<h4>Image</h4>
-<hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create" enctype="multipart/form-data">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-          
-            
-            <div class="form-group">
-                <label asp-for="IdProductdetail" class="control-label"></label>
-                <select asp-for="IdProductdetail" class="selectpicker form-control" aria-label="size 3 select example" >
-                    @{
-                        if (ViewBag.PD != null)
-                        {
-                            foreach (var item in ViewBag.PD)
-                            {
-                                <option value="@item.Id.ToString()"> @item.Name</option>
+    <div class="col-xxl">
+        <div class="card mb-4">
+            <div class="card-header d-flex align-items-center justify-content-between">
+                <h5 class="mb-0">Thêm ảnh</h5>
+
+            </div>
+            <div class="card-body">
+                <form asp-action="Create" method="post" enctype="multipart/form-data">
+                   
+                    <div class="row mb-3">
+                        <label asp-for="IdProductdetail" class="col-sm-2 col-form-label"></label>
+                        <select asp-for="IdProductdetail" class="selectpicker col-sm-10" aria-label="size 3 select example">
+                            @{
+                                if (ViewBag.PD != null)
+                                {
+                                    foreach (var item in ViewBag.PD)
+                                    {
+                                        <option value="@item.Id.ToString()"> @item.Name</option>
+                                    }
+                                }
                             }
-                        }
-                    }
-                </select>
-                <span asp-validation-for="IdProductdetail" class="text-danger"></span>
+                        </select>
+                        <span asp-validation-for="IdProductdetail" class="text-danger"></span>
+                    </div>
+                    <div class="row mb-3">
+                        <label asp-for="Status" class="col-sm-2 col-form-label">Status</label>
+                        <div class="col-sm-10 offset-sm-2">
+                            <div class="form-check">
+                                <input asp-for="Status" name="status" class="form-check-input" checked type="radio" value="1" id="defaultRadio1" />
+                                <label class="form-check-label" asp-for="Status"> Use </label>
+                            </div>
+                            <div class="form-check">
+                                <input asp-for="Status" name="status" class="form-check-input" type="radio" value="0" id="defaultRadio2" />
+                                <label class="form-check-label" for="defaultRadio2"> Not Use </label>
+                            </div>
+                            <span asp-validation-for="Status" class="text-danger"></span>
+                        </div>
+                    </div>
+
+                    <div class="row mb-3">
+                            <label for="formFileMultiple" class="form-label">Chọn ảnh từ Máy tính</label>
+                            <input class="form-control" type="file" id="formFileMultiple" name="imageFile" multiple>
+                    </div>
+                    
+                    <div class="row justify-content-end">
+                        <div class="col-sm-10">
+                            <button type="submit" class="btn btn-primary">
+                                <span class="mdi mdi-check-outline"></span> Submit
+                            </button>
+                            <div class="btn-group ms-2">
+                                <a href="#" class="btn btn-danger waves-effect waves-light" onclick="goBack()">
+                                    <span class="mdi mdi-close"></span> Cancel
+                                </a>
+                                <script>
+                                    function goBack() {
+                                        window.history.back();
+                                    }
+                                </script>
+                            </div>
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <input asp-for="Status" class="form-control" />
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <div class="mb-3">
-                    <label for="formFileMultiple" class="form-label">Chọn ảnh từ Máy tính</label>
-                    <input class="form-control" type="file" id="formFileMultiple" name="imageFile" multiple>
-                </div>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
